syntax="proto3";

package pb;

option go_package = "grpc/cmd/pb";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";

service ProductService {
    rpc GetProduct(Id) returns (ResponseProduct) {
        option (google.api.http) = {
            get: "/v1/getProduct/{id}"
        };
    }
    rpc CreateProduct(RequestProduct) returns (ResponseProduct) {
        option (google.api.http) = {
            post: "/v1/createProduct"
        };
    }
    rpc UpdateProduct(RequestProduct) returns (ResponseProduct) {
        option (google.api.http) = {
            put: "/v1/updateProduct"
        };
    }
    rpc DeleteProduct(Id) returns (ResponseProduct) {
        option (google.api.http) = {
            delete: "/v1/deleteProduct/{id}"
        };
    }
}

message RequestProduct {
    string name = 1 [(validate.rules).string = {min_len : 10, max_len : 80}];
    double price = 2;
    uint32 stock = 3;
    Category category = 4;
}

message ResponseProduct {
    string status = 1;
    string description = 2;
    string detail = 3;
    Product responseData = 4;
}

message Product {
    uint64 id = 1;
    string name = 2[(validate.rules).string = {min_len : 10, max_len : 80}] ;
    double price = 3;
    uint32 stock = 4;
    Category category = 5;
}

message Category {
    uint32 id = 1;
    string name = 2;
}

message Id {
    uint32 id = 1;
}

